--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "build": "tsc -watch"
   },
+  "devDependencies": {
+    "typescript": "5.5.4"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
