fixed netlify build error

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "O objetivo é desenvolver uma aplicação web básica que utilize HTML, CSS e TypeScript para criar uma interface visualmente agradável com dados dinâmicos. Para este projeto optei por criar uma aplicação que exiba na tela os personagens da série \"Rick and Morty\" e que permita a possibilidade de pesquisá-los pelo nome.",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -watch"
+    "build": "tsc"
   },
   "devDependencies": {
     "typescript": "5.5.4"
